--- a/Alexe1kaGitHubSearcher/app/src/main/res/layout/activity_repository.xml
+++ b/Alexe1kaGitHubSearcher/app/src/main/res/layout/activity_repository.xml
@@ -9,6 +9,7 @@
     tools:layout_editor_absoluteX="0dp">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/repo_rv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         tools:layout_constraintTop_creator="1"
