--- a/Alexe1kaGitHubSearcher/app/src/main/res/layout/content_main.xml
+++ b/Alexe1kaGitHubSearcher/app/src/main/res/layout/content_main.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment"
-    android:name="com.githubsearcher.alexe1ka.alexe1kagithubsearcher.MainActivityFragment"
+    android:name="com.githubsearcher.alexe1ka.alexe1kagithubsearcher.Activity.MainActivityFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
