--- a/Alexe1kaGitHubSearcher/app/src/main/res/menu/menu_main.xml
+++ b/Alexe1kaGitHubSearcher/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.githubsearcher.alexe1ka.alexe1kagithubsearcher.MainActivity">
+    tools:context="com.githubsearcher.alexe1ka.alexe1kagithubsearcher.Activity.MainActivity">
 
     <item
         android:id="@+id/menu_description"
