--- a/Alexe1kaGitHubSearcher/app/src/main/res/layout/found_repo_item.xml
+++ b/Alexe1kaGitHubSearcher/app/src/main/res/layout/found_repo_item.xml
@@ -20,11 +20,19 @@
         android:layout_width="338dp"
         android:layout_height="55dp">
 
+        <ImageView
+            android:id="@+id/userAvatarImageView"
+            android:layout_width="58dp"
+            android:layout_height="61dp"
+            app:srcCompat="@drawable/ic_stars_indigo_800_48dp" />
+
         <TextView
             android:id="@+id/userTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/repoNameTextView" />
 
         <TextView
             android:id="@+id/repoNameTextView"
@@ -32,15 +40,16 @@
             android:layout_height="wrap_content"
             android:text="TextView"
             android:layout_centerVertical="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignStart="@+id/urlTextView" />
 
         <TextView
             android:id="@+id/urlTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="TextView"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/repoNameTextView"
-            android:text="TextView" />
+            android:layout_marginStart="91dp" />
     </RelativeLayout>
 
 
